Correct the alignment of the last line in textarea when exporting JPEG

--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -3,6 +3,7 @@ body {
 	width: 100%;
 	position: relative;
 	min-height: 500px;
+	color: #333;
 }
 
 ::-moz-selection {
